--- a/less/_hover.less
+++ b/less/_hover.less
@@ -61,7 +61,7 @@
     .main-button-shadow {
         &:hover {
             color: #0009F7;
-            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.15);
+            box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.11);
         }
     }
     
@@ -399,6 +399,12 @@
     .blog__info__text {
         &:hover {
             color: #5C5DF7;
+        }
+    }
+    
+    .blog-page__reviews__button {
+        &:hover {
+            color: #373FFF;
         }
     }
     
