--- a/less/_popup-media.less
+++ b/less/_popup-media.less
@@ -44,6 +44,10 @@
         padding: 30px;
     }
     
+    .popup-caption {
+        font-size: 20px;
+    }
+    
     .popup-reviews {
         padding: 60px 20px 20px;
         
