--- a/less/_general-style.less
+++ b/less/_general-style.less
@@ -2,7 +2,6 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    list-style: none;
     --webkit-appearance: none;
        -moz-appearance: none;
         -ms-appearance: none;
@@ -13,6 +12,10 @@
 img {
     max-width: 100%;
     vertical-align: top;
+}
+
+ul {
+    list-style: none;
 }
 
 a {
@@ -108,6 +111,7 @@ body {
     overflow: hidden;
     box-shadow: 0px 4px 8px rgba(0, 9, 247, 0.35);
     text-decoration: none;
+    user-select: none;
     
     .text {
         z-index: 2;
@@ -151,6 +155,7 @@ body {
     z-index: 1;
     margin: 0px auto;
     text-decoration: none;
+    user-select: none;
     
     .text {
         z-index: 2;
@@ -178,8 +183,9 @@ body {
     text-transform: uppercase;
     background: #FFFFFF;
     border: 1px solid #F9F6F6;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.1);
     border-radius: 30px;
+    user-select: none;
     transition: color .4s, box-shadow .4s;
     
     .icon-download {
