--- a/less/_icon.less
+++ b/less/_icon.less
@@ -13,6 +13,30 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-like-down-active:before {
+  content: "\e921";
+}
+.icon-like-up-active:before {
+  content: "\e920";
+}
+.icon-change:before {
+  content: "\e91a";
+}
+.icon-comment:before {
+  content: "\e91b";
+}
+.icon-comment-active:before {
+  content: "\e91c";
+}
+.icon-delete:before {
+  content: "\e91d";
+}
+.icon-like-down:before {
+  content: "\e91e";
+}
+.icon-like-up:before {
+  content: "\e91f";
+}
 .icon-print:before {
   content: "\e917";
 }
