--- a/less/_popup.less
+++ b/less/_popup.less
@@ -271,6 +271,12 @@
     text-align: center;
 }
 
+.popup-caption-small {
+    font-size: 16px;
+    line-height: 150%;
+    text-align: center;
+}
+
 .popup-inputs {
     margin-top: 32px;
 }
@@ -582,5 +588,54 @@
 .popup-thanks {
     .popup__info-text {
         margin: 24px 0px 40px;
+    }
+}
+
+/* Popup social */
+
+
+.popup-social {
+    text-align: center;
+    
+    .main-button-shadow {
+        max-width: 100%;
+        
+        .text {
+            margin-left: 10px;
+        }
+        
+        &:first-of-type {
+            margin-bottom: 10px;
+        }
+    }
+}
+
+.popup-social__sub {
+    margin: 30px 0px 20px;
+    font-size: 20px;
+    line-height: 130%;
+    
+    + p {
+        line-height: 130%;
+        margin-bottom: 30px;
+    }
+}
+
+/* //Popup social */
+
+/* Popup delete */
+
+.popup-delete {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+    .popup-caption-small {
+        margin-bottom: 30px;
+    }
+    
+    .main-button-shadow {
+        margin-bottom: 20px;
+        max-width: 236px;
     }
 }
