--- a/less/_main-block-media.less
+++ b/less/_main-block-media.less
@@ -1203,6 +1203,39 @@
     }
     
     /* //Blog page */
+    
+    /* Reviews page */
+    
+    .reviews-page {
+        margin-bottom: 100px;
+        
+        ~ .notyfication {
+            margin-bottom: 50px;
+        }
+    }
+    
+    .reviews-page__add-reviews {
+        margin-top: 100px;
+    }
+    
+    /* //Reviews page */
+    
+    /* Gallery */
+
+    .gallery {
+        margin-bottom: 100px;
+        
+        ~ .notyfication {
+            margin-bottom: 50px;
+        }
+    }
+    
+    .gallery__item {
+        width: calc(50% - 30px);
+        height: 300px;
+    }
+    
+    /* //Gallery */
 }
 
 
@@ -2284,6 +2317,30 @@
     }
     
     /* //Blog page */
+    
+    /* Reviews page */
+    
+    .reviews-page {
+        margin-bottom: 50px;
+        
+        .reviews__item {
+            width: 100%;
+        }
+    }
+    
+    .reviews-page__add-reviews {
+        margin-top: 50px;
+    }
+    
+    /* //Reviews page */
+    
+    /* Gallery */
+
+    .gallery {
+        margin-bottom: 50px;
+    }
+    
+    /* //Gallery */
 }
 
 @media screen and (max-width: 576px) {
@@ -2718,4 +2775,13 @@
     /* //Blog page reviews */
     
     /* //Blog page */
+    
+    /* Gallery */
+    
+    .gallery__item {
+        width: calc(100% - 30px);
+        height: 220px;
+    }
+    
+    /* //Gallery */
 }
