--- a/css/main.css
+++ b/css/main.css
@@ -3673,22 +3673,22 @@ body {
   align-items: flex-end;
   margin-top: 50px;
 }
-.catalog__buttons__container .filter__wrapper {
+.filter__wrapper-drop {
   position: relative;
   z-index: 4;
   width: 255px;
   margin-top: 0px;
 }
-.catalog__buttons__container .filter__wrapper.active .filter__list {
+.filter__wrapper-drop.active .filter__list {
   opacity: 1;
   z-index: 1;
   visibility: visible;
   transition: opacity 0.4s, visibility 0s 0s;
 }
-.catalog__buttons__container .filter__wrapper.active .icon-drop {
+.filter__wrapper-drop.active .icon-drop {
   transform: rotate(180deg);
 }
-.catalog__buttons__container .filter-button {
+.filter__wrapper-drop .filter-button {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -3696,18 +3696,18 @@ body {
   margin-left: 5px;
   transition: color 0.4s;
 }
-.catalog__buttons__container .filter-button .icon-drop {
+.filter__wrapper-drop .filter-button .icon-drop {
   font-size: 10px;
   transition: transform 0.4s;
 }
-.catalog__buttons__container .filter-button .text {
+.filter__wrapper-drop .filter-button .text {
   width: 145px;
   white-space: nowrap;
   text-overflow: ellipsis;
   overflow: hidden;
   padding-right: 5px;
 }
-.catalog__buttons__container .filter__list {
+.filter__wrapper-drop .filter__list {
   flex-direction: column;
   position: absolute;
   right: 0px;
@@ -3724,7 +3724,7 @@ body {
   visibility: hidden;
   transition: opacity 0.4s, visibility 0s 0.4s;
 }
-.catalog__buttons__container .filter__item {
+.filter__wrapper-drop .filter__item {
   width: 100%;
   background-color: #fff;
   margin: 0px;
@@ -3733,10 +3733,10 @@ body {
   font-size: 16px;
   line-height: 24px;
 }
-.catalog__buttons__container .filter__item:last-child {
+.filter__wrapper-drop .filter__item:last-child {
   margin-bottom: 0px;
 }
-.catalog__buttons__container .filter__item.active {
+.filter__wrapper-drop .filter__item.active {
   color: #0009F7;
 }
 .filter__caption {
@@ -4089,7 +4089,7 @@ body {
   transition: color 0.4s;
 }
 .blog-page__reviews__button:first-child {
-  align-self: flex-start;
+  align-self: center;
 }
 .blog-page__reviews__button .text {
   text-align: center;
@@ -4139,6 +4139,89 @@ body {
 /* //Blog page reviews */
 .workshops__list.workshops__list-blog-page {
   margin-top: 30px;
+}
+/* //Blog page */
+/* Reviews page */
+.reviews-page {
+  margin-bottom: 150px;
+}
+.reviews-page ~ .notyfication {
+  margin-bottom: 100px;
+}
+.reviews-page .reviews__list {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  height: auto;
+  margin-bottom: -20px;
+}
+.reviews-page .reviews__item {
+  position: static;
+  transform: none !important;
+  opacity: 1 !important;
+  margin-bottom: 20px;
+  width: calc(50% - 15px);
+}
+.reviews-page__add-reviews {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 665px;
+  margin: 150px auto 0px;
+  text-align: center;
+}
+.add-reviews__sub-info {
+  font-size: 16px;
+  line-height: 130%;
+  margin: 20px 0px 30px;
+}
+/* //Reviews page */
+/* Gallery */
+.gallery {
+  margin-bottom: 150px;
+}
+.gallery ~ .notyfication {
+  margin-bottom: 100px;
+}
+.gallery__wrapper .main_button {
+  margin-top: 20px;
+}
+.gallery__list {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 30px;
+  margin-right: -30px;
+  margin-bottom: -30px;
+}
+.gallery__item {
+  width: calc(33.333% - 30px);
+  height: 336px;
+  margin-right: 30px;
+  margin-bottom: 30px;
+  cursor: pointer;
+}
+.gallery__item img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+/* Order page */
+.order-page__container {
+  max-width: 386px;
+  margin: 30px auto 50px;
+}
+.order-page__container .input_wrapper {
+  margin-bottom: 20px;
+}
+.order-page__check-event__filter {
+  margin-top: 30px;
+}
+.order-page__check-event__filter .filter__wrapper {
+  width: 315px;
+  white-space: nowrap;
+}
+.order-page__check-event__filter .filter__wrapper .text {
+  width: 125px;
 }
 @media (min-width: 1160px) {
   @supports (-ms-ime-align:auto) {
@@ -5483,6 +5566,29 @@ body {
     margin-bottom: 50px;
   }
   /* //Blog page */
+  /* Reviews page */
+  .reviews-page {
+    margin-bottom: 100px;
+  }
+  .reviews-page ~ .notyfication {
+    margin-bottom: 50px;
+  }
+  .reviews-page__add-reviews {
+    margin-top: 100px;
+  }
+  /* //Reviews page */
+  /* Gallery */
+  .gallery {
+    margin-bottom: 100px;
+  }
+  .gallery ~ .notyfication {
+    margin-bottom: 50px;
+  }
+  .gallery__item {
+    width: calc(50% - 30px);
+    height: 300px;
+  }
+  /* //Gallery */
 }
 @media (max-width: 767px) {
   /* Main Section */
@@ -6273,6 +6379,22 @@ body {
     margin-bottom: 50px;
   }
   /* //Blog page */
+  /* Reviews page */
+  .reviews-page {
+    margin-bottom: 50px;
+  }
+  .reviews-page .reviews__item {
+    width: 100%;
+  }
+  .reviews-page__add-reviews {
+    margin-top: 50px;
+  }
+  /* //Reviews page */
+  /* Gallery */
+  .gallery {
+    margin-bottom: 50px;
+  }
+  /* //Gallery */
 }
 @media screen and (max-width: 576px) {
   /* Main section */
@@ -6569,6 +6691,12 @@ body {
   }
   /* //Blog page reviews */
   /* //Blog page */
+  /* Gallery */
+  .gallery__item {
+    width: calc(100% - 30px);
+    height: 220px;
+  }
+  /* //Gallery */
 }
 @media (max-width: 1210px) {
   /* Footer */
@@ -6650,6 +6778,8 @@ body {
   }
 }
 .popup {
+  display: flex;
+  flex-direction: column;
   position: fixed;
   top: 50%;
   left: 50%;
@@ -6657,27 +6787,30 @@ body {
   z-index: 4;
   background-color: #fff;
   max-height: 100%;
-  overflow: auto;
+  overflow: hidden;
   border-radius: 30px;
-  padding: 50px;
   max-width: 480px;
   width: 100%;
-  scrollbar-color: rgba(193, 199, 221, 0.75) white;
-  scrollbar-width: 5px;
-  -ms-overflow-style: none;
-}
-.popup::-webkit-scrollbar {
-  width: 5px;
-}
-.popup::-webkit-scrollbar-thumb {
-  background: rgba(193, 199, 221, 0.75);
-  border-radius: 4px;
 }
 .popup .input_wrapper {
-  margin-bottom: 24px;
+  margin-bottom: 20px;
 }
 .popup .main_button-color {
   margin: 0px auto;
+}
+.popup__wrapper {
+  overflow: auto;
+  scrollbar-color: rgba(193, 199, 221, 0.75) white;
+  scrollbar-width: 5px;
+  -ms-overflow-style: none;
+  padding: 50px;
+}
+.popup__wrapper::-webkit-scrollbar {
+  width: 5px;
+}
+.popup__wrapper::-webkit-scrollbar-thumb {
+  background: rgba(193, 199, 221, 0.75);
+  border-radius: 4px;
 }
 .popup.active {
   transform: translate(-50%, -50%) scale(1);
@@ -6702,6 +6835,16 @@ body {
   top: 0px;
   left: 0px;
   transition: opacity 0.6s, visibility 0s 0.6s, transform 0.6s;
+  scrollbar-color: rgba(193, 199, 221, 0.75) white;
+  scrollbar-width: 5px;
+  -ms-overflow-style: none;
+}
+.popup-gallery::-webkit-scrollbar {
+  width: 5px;
+}
+.popup-gallery::-webkit-scrollbar-thumb {
+  background: rgba(193, 199, 221, 0.75);
+  border-radius: 4px;
 }
 .popup-gallery.active {
   visibility: visible;
@@ -6816,6 +6959,7 @@ body {
   cursor: pointer;
   outline: none;
   color: #636c8a;
+  z-index: 4;
   transition: color 0.4s, transform 0.4s;
 }
 .overlay {
@@ -6841,9 +6985,11 @@ body {
   }
 }
 .popup-reviews {
-  padding: 30px 40px 85px;
   max-width: 540px;
   width: 100%;
+}
+.popup-reviews .popup__wrapper {
+  padding: 30px 40px 85px;
 }
 .popup-reviews .close-popup {
   color: #0009F7;
@@ -6930,8 +7076,11 @@ body {
   margin: 15px auto 0px;
   transition: color 0.4s;
 }
-.popup-person__wrapper {
+.person__wrapper {
   position: relative;
+}
+.person__wrapper .input_wrapper {
+  margin-bottom: 32px;
 }
 .add-person {
   display: flex;
@@ -7210,13 +7359,13 @@ body {
   /* //Popup galery */
 }
 @media screen and (max-width: 767px) {
-  .popup {
+  .popup__wrapper {
     padding: 30px;
   }
   .popup-caption {
     font-size: 20px;
   }
-  .popup-reviews {
+  .popup-reviews .popup__wrapper {
     padding: 60px 20px 20px;
   }
   .popup-reviews .close-popup {
@@ -7256,7 +7405,7 @@ body {
 }
 @media screen and (max-width: 576px) {
   /* Popup */
-  .popup {
+  .popup_wrapper {
     max-width: 100%;
     padding: 30px 20px;
   }
