--- a/less/_popup-media.less
+++ b/less/_popup-media.less
@@ -40,7 +40,7 @@
 }
 
 @media screen and (max-width: 767px) {
-    .popup {
+    .popup__wrapper {
         padding: 30px;
     }
     
@@ -49,7 +49,10 @@
     }
     
     .popup-reviews {
-        padding: 60px 20px 20px;
+        
+        .popup__wrapper {
+            padding: 60px 20px 20px;
+        }
         
         .close-popup {
             bottom: auto;
@@ -101,7 +104,7 @@
     
     /* Popup */
     
-    .popup {
+    .popup_wrapper {
         max-width: 100%;
         padding: 30px 20px;
     }
